# django-teradata

./: CHANGELOG.md  LICENSE  README.md  setup.cfg
django_teradata/: __init__.py  base.py  compiler.py  creation.py  expressions.py  features.py  functions.py  introspection.py  operations.py  schema.py  text.py  utils.py
