[metadata]
name = django-teradata
version = attr: django_teradata.__version__
url = https://github.com/septimit/django-teradata
maintainer = Septimiu Turcu
maintainer_email = turcu.septimiu@gmail.com
license = MIT License
description = Django backend for Teradata
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Alfa
    Framework :: Django
    Framework :: Django :: 4.2
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/septimit/django-teradata
    Tracker = https://github.com/septimit/django-teradata/issues

[options]
python_requires = >=3.8
packages = find:
install_requires =
    teradatasql >= 17.20.0.0

[flake8]
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
